@@ -5,7 +5,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: loading.test,v 1.5 2000/12/22 09:47:15 mdejong Exp $
+# RCS: @(#) $Id: loading.test,v 1.1 2002/07/20 05:36:54 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -195,7 +195,20 @@ test loading-3.1 {load into Java} {
 Initialized Java Cache
 FreeJavaCache}
 
-test loading-3.2 {load into Java, exit from Tcl} {
+test loading-3.2 {load into a Java, 2 interps} {
+    set trace [makeFile {} tclblend.trace]
+    file delete $trace
+    set env(TCLBLEND_TRACE) $trace
+    exec $env(JAVA) -classpath $env(CLASSPATH) tests.JavaLoadTclBlend2 \
+        >@stdout 2>@stderr
+    viewFile tclblend.trace
+} {Entrypoint JavaSetupJava
+Initialized Java Cache
+Entrypoint JavaSetupJava
+TSD already initialized
+FreeJavaCache}
+
+test loading-3.3 {load into Java, exit from Tcl} {
     set trace [makeFile {} tclblend.trace]
     file delete $trace
     set env(TCLBLEND_TRACE) $trace
@@ -209,7 +222,7 @@ FreeJavaCache}
 
 # Next test fails because Tcl thread termination callbacks are not invoked.
 
-test loading-3.3 {load into two Java threads} {
+test loading-3.4 {load into two Java threads} {
     set trace [makeFile {} tclblend.trace]
     file delete $trace
     set env(TCLBLEND_TRACE) $trace
@@ -218,9 +231,9 @@ test loading-3.3 {load into two Java threads} {
     viewFile tclblend.trace
 } {Entrypoint JavaSetupJava
 Initialized Java Cache
+FreeJavaCache
 Entrypoint JavaSetupJava
 Initialized Java Cache
-FreeJavaCache
 FreeJavaCache}
 
 
